<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/networkType"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <RadioGroup
        android:id="@+id/networkOptions"
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/noOption"
            android:text="@string/none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/anyOption"
            android:text="@string/any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/wifiOption"
            android:text="@string/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:text="@string/jobSchedule"
        android:textAllCaps="false"
        android:onClick="scheduleJob"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/cancelJob"
        android:textAllCaps="false"
        android:onClick="cancelJobs"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_margin="4dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/idleSwitch"
            android:text="@string/idle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/chargingSwitch"
            android:text="@string/charging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/seekBarLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/override"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
            android:id="@+id/seekBarProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notSet"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>